--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/core": "10.0.28",
     "react": "16.13.0",
     "react-dom": "16.13.0",
-    "react-helmet": "5.2.1"
+    "react-helmet": "5.2.1",
+    "react-signature-canvas": "1.0.3"
   }
 }
